# teamagent

./: AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  justfile
.claude/skills/_shared/: cd-reference.md
.claude/skills/deploy/: SKILL.md
.claude/skills/release/: SKILL.md
.github/workflows/: preview.yml  release.yml
.prd/: 01-spec.md  02-architecture.md  03-research-notes.md  04-research-cliproxyapi.md  05-findings-dashboard-overhaul.md  08-tui-animations.md  10-model-usage-dashboard.md  11-llmux-islands-spec.md  12-llmux-islands-architecture.md
demo/: llmux.tape
llmux-islands/LlmuxIslands/App/: AppDelegate.swift
llmux-islands/LlmuxIslands/Core/: DemoMode.swift  Settings.swift  SnapshotMode.swift
llmux-islands/LlmuxIslands/Dashboard/: UsageTiles.swift
llmux-islands/LlmuxIslands/Llmux/: DaemonLauncher.swift  IslandUsageModel.swift
llmux-islands/LlmuxIslands/UI/Components/: EmailPixelized.swift
src/: build_info.rs  dashboard.rs  demo.rs  lib.rs  logging.rs  main.rs  pricing.rs  routing.rs  session.rs
src/auth/: credentials.rs  mod.rs  profile.rs
src/cli/: accounts.rs  api.rs  daemon.rs  env.rs  import.rs  login.rs  mod.rs  run.rs  status.rs
src/config/: migrate.rs  mod.rs  schema.rs
src/provider/: anthropic.rs  codex.rs  stubs.rs
src/proxy/: codex_trace.rs  forward.rs  idle_probe.rs  logging.rs  login.rs  mod.rs  raw_io.rs  server.rs  sse.rs
src/scheduler/: idle_probe.rs  mod.rs  select.rs  usage.rs  window.rs
src/tui/: activity.rs  event.rs  mod.rs  ui.rs  view.rs
tests/: cli.rs  e2e.rs  mock_upstream.rs
(+3 files in other folders)
