[package]
name = "llmux"
version = "0.2.3"
edition = "2021"
license = "MIT"
description = "Multi-account, multi-provider LLM proxy for Claude Code with quota-maximizing scheduling"
repository = "https://github.com/2lab-ai/llmux"

[[bin]]
name = "llmux"
path = "src/main.rs"

[dependencies]
axum = "0.8.9"
base64 = "0.22.1"
bytes = "1.11.1"
clap = { version = "4.6.1", features = ["derive", "string"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
dirs = "6.0.0"
getrandom = "0.3.4"
http = "1.4.2"
# Re-exported by axum::body::to_bytes' error source; we downcast to its
# LengthLimitError to map an over-cap request body to 413 (already in the
# tree transitively via axum/reqwest).
http-body-util = "0.1.3"
ratatui = "0.30.1"
reqwest = { version = "0.13.4", default-features = false, features = ["stream", "rustls", "json", "http2"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tokio-stream = "0.1.17"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
ulid = "1.2.1"

[target.'cfg(unix)'.dependencies]
# Local UTC offset for the dashboard's absolute reset times (localtime_r);
# std has no timezone database and chrono is too heavy for one offset.
libc = "0.2"

[dev-dependencies]
